# LeviathanEngine

./: .gitignore  BuildCMake.bat  CMakeLists.txt  License.txt  README.md
Engine/: BuildCMake.bat  CMakeLists.txt
Engine/Launcher/Source/: LauncherMain.cpp  LauncherPch.h
Engine/Modules/AssetImporter/Source/Private/: AssetImporter.cpp  AssetImporterPch.h  AssetTypes.cpp  ModelImporter.cpp  ModelImporter.h
Engine/Modules/AssetImporter/Source/Public/: AssetImporter.h  AssetTypes.h
Engine/Modules/LeviathanAssets/Source/Private/: AssetTypes.cpp  LeviathanAssets.cpp  LeviathanAssetsPch.h  ModelImporter.cpp  TextureImporter.cpp
Engine/Modules/LeviathanAssets/Source/Public/: AssetTypes.h  LeviathanAssets.h  ModelImporter.h  TextureImporter.h
Engine/Modules/LeviathanCore/Source/Private/: Core.cpp  InputKey.cpp  LeviathanCorePch.h  LeviathanString.cpp  MathLibrary.cpp  MathTypes.cpp  PlatformWindow.h  Serialize.cpp  Text.cpp  Timing.cpp  Win32Platform.cpp  Win32Window.cpp  Win32Window.h
Engine/Modules/LeviathanCore/Source/Public/: Bits.h  Core.h  DataStructures.h  InputKey.h  LeviathanAssert.h  LeviathanCore.h  LeviathanString.h  Logging.h  MathLibrary.h  MathTypes.h  Platform.h  Serialize.h  Text.h  Timing.h
Engine/Modules/LeviathanInputCore/Source/Private/: LeviathanInputCorePch.h  Win32Input.cpp  Win32Input.h  Win32KeyboardState.cpp  Win32KeyboardState.h  Win32MouseState.cpp  XInputGamepad.cpp
Engine/Modules/LeviathanInputCore/Source/Public/: PlatformInput.h
Engine/Modules/LeviathanRenderer/ShaderSource/: AmbientLightPixelShader.hlsl  AmbientLightVertexShader.hlsl  DirectionalLightPixelShader.hlsl  DirectionalLightVertexShader.hlsl  EnvironmentLightPixelShader.hlsl  EnvironmentLightVertexShader.hlsl  EquirectToCubemapPixelShader.hlsl  EquirectToCubemapVertexShader.hlsl  Lighting.hlsl  Math.hlsl  PixelShader.hlsl  PointLightPixelShader.hlsl  PointLightVertexShader.hlsl  PostProcessPixelShader.hlsl  PostProcessVertexShader.hlsl  SkyboxPixelShader.hlsl  SkyboxVertexShader.hlsl  SpotLightPixelShader.hlsl  SpotLightVertexShader.hlsl  VertexShader.hlsl
Engine/Modules/LeviathanRenderer/Source/Private/: Camera.cpp  Direct3D11PCApi.cpp  Direct3D11PCApi.h  Direct3D11PCRenderer.cpp  LeviathanRenderer.cpp  LeviathanRendererPch.h  LinearColor.cpp  RenderContext.h  RenderContextSettings.h  RenderDevice.h  Renderer.h  RendererConstants.cpp  RendererResourceId.cpp  VertexTypes.h  Vertices.h  VulkanApi.cpp  VulkanApi.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderDevice.cpp
Engine/Modules/LeviathanRenderer/Source/Public/: Camera.h  ConstantBufferTypes.h  LeviathanRenderer.h  LightTypes.h  LinearColor.h  RendererConstants.h  RendererResourceId.h  VertexTypes.h
Engine/Modules/LeviathanTools/Source/Private/: DemoTool.cpp  LeviathanTools.cpp  LeviathanToolsPch.h  PerfStatsDisplay.cpp
Engine/Modules/LeviathanTools/Source/Public/: DemoTool.h  LeviathanTools.h  PerfStatsDisplay.h
Engine/Modules/TestTitle/Source/Private/: TestTitle.cpp  TestTitlePch.h
Launcher/Source/: LauncherMain.cpp
LeviathanCore/Source/Private/: Core.cpp  LeviathanCore.cpp  LeviathanEntry.cpp  PlatformWindow.h  Win32Platform.cpp  Win32Window.cpp  Win32Window.h
LeviathanCore/Source/Private/Core/: Core.cpp  Core.h
LeviathanCore/Source/Private/Platform/: Window.h
LeviathanCore/Source/Private/Platform/Win32/: Win32FunctionErrors.h  Win32Platform.cpp  Win32Window.cpp  Win32Window.h
LeviathanCore/Source/Public/: Callback.h  Core.h  LeviathanCore.h  LeviathanEntry.h  Platform.h  PlatformEntryPrototype.h
Modules/LeviathanCore/Source/Private/: Core.cpp  LeviathanCore.cpp  Logging.cpp  Win32Platform.cpp
Modules/LeviathanCore/Source/Public/: Callback.h  Core.h  LeviathanCore.h  Platform.h
Modules/LeviathanInput/Source/Private/: LeviathanInput.cpp  Win32Input.cpp  Win32Input.h  Win32KeyboardState.cpp  Win32KeyboardState.h  Win32MouseState.cpp  Win32MouseState.h  XInputGamepad.cpp  XInputGamepad.h
Modules/LeviathanInput/Source/Public/: LeviathanInput.h  PlatformInput.h
Modules/LeviathanInputCore/Source/Private/: LeviathanInputCore.cpp  Win32Input.cpp  Win32MouseState.h  XInputGamepad.cpp  XInputGamepad.h
Modules/LeviathanInputCore/Source/Public/: LeviathanInputCore.h
Modules/TestTitle/Source/Private/: TestTitle.cpp  TestTitlePch.h
Modules/TestTitle/Source/Public/: TestTitle.h
SharedPrecompiledHeaders/: StandardPch.h  Win32Pch.h
TestTitle/Source/Private/: Main.cpp  TestTitle.cpp
TestTitle/Source/Public/: TestTitle.h
