cmake_minimum_required(VERSION "3.28.0")

project("LeviathanEngine")

set(BINARY_OUTPUT_DIRECTORY "Bin")
set(EXECUTABLE_OUTPUT_BINARY_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}/Exe/$<CONFIG>")
set(STATIC_LIBRARY_OUTPUT_BINARY_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}/Lib/$<CONFIG>")
set(SHARED_PRECOMPILED_HEADERS_DIRECTORY "SharedPrecompiledHeaders")

# TODO: Replace following block with a function that takes the following set variables as arguments.
set(LEVIATHAN_CORE_NAME "LeviathanCore")
set(CURRENT_LIBRARY_TARGET_NAME "${LEVIATHAN_CORE_NAME}")
set(CURRENT_LIBRARY_TARGET_PRECOMPILED_HEADERS "${SHARED_PRECOMPILED_HEADERS_DIRECTORY}/StandardPch.h")
set(CURRENT_LIBRARY_TARGET_HEADERS "${CURRENT_LIBRARY_TARGET_NAME}/Source/Public/LeviathanCore.h")
set(CURRENT_LIBRARY_TARGET_SOURCES "${CURRENT_LIBRARY_TARGET_NAME}/Source/Private/LeviathanCore.cpp")
set(CURRENT_LIBRARY_TARGET_LINK_LIBRARIES "")
set(CURRENT_LIBRARY_TARGET_INCLUDE_DIRECTORIES "${CURRENT_LIBRARY_TARGET_NAME}/Source/Public")
add_library("${CURRENT_LIBRARY_TARGET_NAME}" STATIC  "${CURRENT_LIBRARY_TARGET_HEADERS}" "${CURRENT_LIBRARY_TARGET_SOURCES}")
set_property(TARGET "${CURRENT_LIBRARY_TARGET_NAME}" PROPERTY CXX_STANDARD_23)
target_compile_options("${CURRENT_LIBRARY_TARGET_NAME}" PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX> $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Werror>)
set_target_properties("${CURRENT_LIBRARY_TARGET_NAME}" PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${STATIC_LIBRARY_OUTPUT_BINARY_DIRECTORY}")
target_precompile_headers("${CURRENT_LIBRARY_TARGET_NAME}" PRIVATE "${CURRENT_LIBRARY_TARGET_PRECOMPILED_HEADERS}")
target_link_libraries("${CURRENT_LIBRARY_TARGET_NAME}" "${CURRENT_LIBRARY_TARGET_LINK_LIBRARIES}")
target_include_directories("${CURRENT_LIBRARY_TARGET_NAME}" PRIVATE "${CURRENT_LIBRARY_TARGET_INCLUDE_DIRECTORIES}")

# TODO: Replace following block with a function that takes the following set variables as arguments.
set(TEST_TITLE_NAME "TestTitle")
set(CURRENT_EXECUTABLE_TARGET_NAME "${TEST_TITLE_NAME}")
set(CURRENT_EXECUTABLE_TARGET_PRECOMPILED_HEADERS "${SHARED_PRECOMPILED_HEADERS_DIRECTORY}/StandardPch.h")
set(CURRENT_EXECUTABLE_TARGET_HEADERS "")
set(CURRENT_EXECUTABLE_TARGET_SOURCES "${CURRENT_EXECUTABLE_TARGET_NAME}/Source/Private/Main.cpp")
set(CURRENT_EXECUTABLE_TARGET_LINK_LIBRARIES "${LEVIATHAN_CORE_NAME}")
set(CURRENT_EXECUTABLE_TARGET_INCLUDE_DIRECTORIES "${LEVIATHAN_CORE_NAME}/Source/Public")
add_executable("${CURRENT_EXECUTABLE_TARGET_NAME}" "${CURRENT_EXECUTABLE_TARGET_HEADERS}" "${CURRENT_EXECUTABLE_TARGET_SOURCES}")
set_property(TARGET "${CURRENT_EXECUTABLE_TARGET_NAME}" PROPERTY CXX_STANDARD_23)
target_compile_options("${CURRENT_EXECUTABLE_TARGET_NAME}" PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX> $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Werror>)
set_target_properties("${CURRENT_EXECUTABLE_TARGET_NAME}" PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXECUTABLE_OUTPUT_BINARY_DIRECTORY}")
target_precompile_headers("${CURRENT_EXECUTABLE_TARGET_NAME}" PRIVATE "${CURRENT_EXECUTABLE_TARGET_PRECOMPILED_HEADERS}")
target_link_libraries("${CURRENT_EXECUTABLE_TARGET_NAME}" "${CURRENT_EXECUTABLE_TARGET_LINK_LIBRARIES}")
target_include_directories("${CURRENT_EXECUTABLE_TARGET_NAME}" PRIVATE "${CURRENT_EXECUTABLE_TARGET_INCLUDE_DIRECTORIES}")

set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT "${TEST_TITLE_NAME}")
